--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,21 +8,23 @@
         </div>
         <div class='container-form-home '>
           <h2>Demander une démo</h2>
-          <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" required class="form-control" id="name" name="name" placeholder="Jean-Michel Test"/>
-          </div>
-          <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" required pattern="(?:[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*|(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])*)@(?:(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?|\[(?:(?:(2(5[0-5]|[0-4][0-9])|1[0-9][0-9]|[1-9]?[0-9]))\.){3}(?:(2(5[0-5]|[0-4][0-9])|1[0-9][0-9]|[1-9]?[0-9])|[a-z0-9-]*[a-z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)\])" class="form-control" id="email" name="email" placeholder="JeanMichel-test@gmail.com"/>
-          </div>
-          <div class="form-group">
-            <label for="description">Raisons</label>
-            <textarea class="form-control" required rows="3" id="description" name="description" placeholder="Faciliter la rédaction de PPSPS au sein de mon entreprise de BTP" ></textarea>
-          </div>
-          <div class="d-flex justify-content-center">
-            <button type="submit" id="btn-send-mail" class="btn-orange">Demander une démo</button>
-          </div>
+          <form action=<%= contact_path %>>
+            <div class="form-group">
+              <label for="name">Name</label>
+              <input type="text" required class="form-control" id="name" name="name" placeholder="Jean-Michel Test"/>
+            </div>
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input type="email" required pattern="(?:[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*|(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21\x23-\x5b\x5d-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])*)@(?:(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?|\[(?:(?:(2(5[0-5]|[0-4][0-9])|1[0-9][0-9]|[1-9]?[0-9]))\.){3}(?:(2(5[0-5]|[0-4][0-9])|1[0-9][0-9]|[1-9]?[0-9])|[a-z0-9-]*[a-z0-9]:(?:[\x01-\x08\x0b\x0c\x0e-\x1f\x21-\x5a\x53-\x7f]|\\[\x01-\x09\x0b\x0c\x0e-\x7f])+)\])" class="form-control" id="email" name="email" placeholder="JeanMichel-test@gmail.com"/>
+            </div>
+            <div class="form-group">
+              <label for="description">Raisons</label>
+              <textarea class="form-control" required rows="3" id="description" name="description" placeholder="Faciliter la rédaction de PPSPS au sein de mon entreprise de BTP" ></textarea>
+            </div>
+            <div class="d-flex justify-content-center">
+              <button type="submit" id="btn-send-mail" class="btn-orange">Demander une démo</button>
+            </div>
+          </form>
         </div>
       </div>
     </div>
