--- a/app/views/ppsps/destroy_logo_client.js.erb
+++ b/app/views/ppsps/destroy_logo_client.js.erb
@@ -1,1 +1,2 @@
-document.querySelector(".render-logo").innerHTML = "<%= j(render 'ppsps/form/render_logo_client') %>"
+document.querySelector('.logo-client').classList.add('hidden')
+document.querySelector('.logo-client-input').classList.remove('hidden')
