Redirect when logged + Correct some db pages

--- a/app/views/moes/_elements.html.erb
+++ b/app/views/moes/_elements.html.erb
@@ -16,9 +16,10 @@
             </div>
           </div>
           <div class="line">
-          <i class="fas fa-phone-alt logo-bdd"></i>
-          <div class="line-text">
-            <%= moe.phone %></div>
+            <i class="fas fa-phone-alt logo-bdd"></i>
+            <div class="line-text">
+              <%= moe.phone %>
+            </div>
           </div>
           <div class="line">
             <i class="fas fa-envelope logo-bdd"></i>
