--- a/app/views/ppsps/render_pages/admin/_company_resps.pdf.erb
+++ b/app/views/ppsps/render_pages/admin/_company_resps.pdf.erb
@@ -24,7 +24,7 @@
     <div class="flex-div-40">Référence du projet :</div><div class="flex-div-60"><%= @ppsp.project_information.reference %></div>
   </div>
 </div>
-<div class="pdf-subsubtitle mt-2">
+<div class="pdf-subsubtitle mt-2 text-center">
   Responsable
 </div>
 <div class="container-50">
@@ -34,7 +34,7 @@
       <div class="flex-div-40">Email : </div><div class="flex-div-60"><%= @ppsp.project_information.responsible.email %></div>
   </div>
 </div>
-<div class="pdf-subsubtitle">
+<div class="pdf-subsubtitle text-center">
   Chef de chantier
 </div>
 <div class="container-50">
@@ -44,7 +44,7 @@
       <div class="flex-div-40">Email : </div><div class="flex-div-60"><%= @ppsp.project_information.site_manager.email %></div>
   </div>
 </div>
-<div class="pdf-subsubtitle">
+<div class="pdf-subsubtitle text-center">
   Chef d'équipe
 </div>
 <div class="container-50">
