--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -39,8 +39,24 @@
     &:hover {
       color: black;
       text-decoration: none;
+      span {
+        opacity: 1;
+      }
+    }
+    span {
+      opacity: 0;
+      position: absolute;
+      top: -150%;
+      right: -50%;
+      transition: opacity 0.2s;
+      background-color: white;
+      border-radius: 4px;
+      padding: 4px 8px;
+      color: black;
+      font-size: 12px;
     }
   }
+
   .card-ppsp-delete {
     position: relative;
     float: right;
@@ -52,8 +68,24 @@
     &:hover {
       color: black;
       text-decoration: none;
+      span {
+        opacity: 1;
+      }
+    }
+    span {
+      opacity: 0;
+      position: absolute;
+      top: -100%;
+      right: 0%;
+      transition: opacity 0.2s;
+      background-color: white;
+      border-radius: 4px;
+      padding: 4px 8px;
+      color: black;
+      font-size: 12px;
     }
   }
+  
   .card-ppsp-edit {
     position: relative;
     float: right;
@@ -64,6 +96,21 @@
     &:hover {
       color: black;
       text-decoration: none;
+      span {
+        opacity: 1;
+      }
+    }
+    span {
+      opacity: 0;
+      position: absolute;
+      top: -100%;
+      right: -50%;
+      transition: opacity 0.2s;
+      background-color: white;
+      border-radius: 4px;
+      padding: 4px 8px;
+      color: black;
+      font-size: 12px;
     }
   }
   .card-ppsp-link {
