--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -10,6 +10,13 @@
   padding: 40px 40px;
 }
 
+.container-annexe {
+  background: white;
+  padding: 4px;
+  box-shadow: 2px 2px 2px grey;
+  margin-top: 4px;
+}
+
 @media (min-width: 576px) {
   .container-app {
     max-width: 540px;
