--- a/app/views/ppsps/render_pages/header.html.erb
+++ b/app/views/ppsps/render_pages/header.html.erb
@@ -9,7 +9,7 @@
       P.P.S.P.S
     </div>
     <div class="pdf-subtitle-header">
-      <%= "Opération : #{@ppsp.project_information.name}" %>
+      <%= "Opération : #{@ppsp.name}" %>
     </div>
   </div>
   <% if @ppsp.logo_client.attached? %>
