--- a/app/views/ppsps/render_pages/security/_services.pdf.erb
+++ b/app/views/ppsps/render_pages/security/_services.pdf.erb
@@ -1,5 +1,5 @@
 <div class="container-80">
-  <% if @lifesavers.empty? && !@ppsp.worksite.infirmary %>
+  <% if @lifesavers.empty? && !@ppsp.infirmary %>
     <h1 class="pdf-title mb-2">
       III. Disposition en matière de secours et d'évacuation
     </h1>
