--- a/app/views/ppsps/render_pages/worksite/_infos.pdf.erb
+++ b/app/views/ppsps/render_pages/worksite/_infos.pdf.erb
@@ -4,7 +4,7 @@
   <% @num_worksite += 1%>
 </h2>
 <div class="text-center container-50">
-  <%= @ppsp.worksite.nature %>
+  <%= @ppsp.nature %>
 </div>
 
 <h2 class="pdf-subtitle">
@@ -12,7 +12,7 @@
   <% @num_worksite += 1%>
 </h2>
 <div class="text-center container-50">
-  <%= @ppsp.worksite.address %>
+  <%= @ppsp.address %>
 </div>
 <div class="pdf-subsubtitle text-center">
   Localisation
