--- a/app/views/ppsps/show.pdf.erb
+++ b/app/views/ppsps/show.pdf.erb
@@ -38,7 +38,7 @@
       </div>
     <% end %>
 
-    <% if @ppsp.worksite.plan_installation.attached? %>
+    <% if @ppsp.plan_installation.attached? %>
       <div class="page-break">
         <%= render partial: 'ppsps/render_pages/worksite/plan_installation' %>
       </div>
@@ -56,7 +56,7 @@
       </div>
     <% end %>
 
-    <% if @lifesavers.any? || @ppsp.worksite.infirmary %>
+    <% if @lifesavers.any? || @ppsp.infirmary %>
       <div class="page-break">
         <%= render partial: 'ppsps/render_pages/security/list' %>
       </div>
