--- a/app/views/steps_controllers/ppsps_steps/ppsp_prevention.html.erb
+++ b/app/views/steps_controllers/ppsps_steps/ppsp_prevention.html.erb
@@ -1,5 +1,5 @@
 <div class="container mb-3">
-  <%= simple_form_for @ppsp, remote: true, html: {multipart: true}, url: wizard_path do |f| %> 
+  <%= simple_form_for @ppsp, remote: true, html: {multipart: true}, url: wizard_path, html: { id: 'ppsp_form' } do |f| %> 
     <h3 class="col-md-6 offset-md-3 form-subtitle">
       1-6. Ajout du logo du client (si disponible)
     </h3>
@@ -88,8 +88,7 @@
         <%= f.input :work_medecine_id, as: :select, label: false, collection: @work_medecines, label_method: lambda {|x| "#{x.address} - #{x.phone}"}, input_html: {class: "select-2"} %>
       </div>
     </div>
-  <%= f.submit 'Suivant' %>
-  <%= link_to "Précédent", previous_wizard_path, class: 'link' %>
+    <%= render 'render_footer_steps', step: @step, ppsp: @ppsp, f: f %>
   <% end %>
     <% if policy(SecurityCoordinator).create? %>
     <div class="modal fade" id="ModalSecurityCoordinator" tabindex="-1" role="dialog" aria-labelledby="ModalSecurityCoordinator" aria-hidden="true">
