--- a/app/views/steps_controllers/ppsps_steps/ppsp_team_number.html.erb
+++ b/app/views/steps_controllers/ppsps_steps/ppsp_team_number.html.erb
@@ -1,5 +1,5 @@
 <div class="container mb-3">
-  <%= simple_form_for @ppsp, remote: true, html: {multipart: true}, url: wizard_path do |f| %> 
+  <%= simple_form_for @ppsp, remote: true, html: {multipart: true}, url: wizard_path, html: { id: 'ppsp_form' } do |f| %> 
     <h3 class="col-md-6 offset-md-3 form-subtitle">
       2-5. Effectifs
     </h3>
@@ -19,7 +19,6 @@
     <div class="col-md-10 offset-md-1">
         <div id="react-render-site-installations" data-ppsps_id=<%=@ppsp.id%>></div>
     </div>
-    <%= f.submit 'Suivant' %>
-    <%= link_to "Précédent", previous_wizard_path, class: 'link' %>
+    <%= render 'render_footer_steps', step: @step, ppsp: @ppsp, f: f %>
   <% end %>
 </div>
