--- a/app/views/steps_controllers/ppsps_steps/ppsp_time_table.html.erb
+++ b/app/views/steps_controllers/ppsps_steps/ppsp_time_table.html.erb
@@ -1,5 +1,5 @@
 <div class="container mb-3">
-  <%= simple_form_for @ppsp, remote: true, html: {multipart: true}, url: wizard_path do |f| %> 
+  <%= simple_form_for @ppsp, remote: true, html: {multipart: true}, url: wizard_path, html: { id: 'ppsp_form' } do |f| %> 
     <h3 class="col-md-6 offset-md-3 form-subtitle">
       2-4. Horaires de travail
     </h3>
@@ -104,8 +104,7 @@
         </div>
       </div>
     </div>
-  <%= f.submit 'Suivant' %>
-  <%= link_to "Précédent", previous_wizard_path, class: 'link' %>
+    <%= render 'render_footer_steps', step: @step, ppsp: @ppsp, f: f %>
   <% end %>
 </div>
   
