--- a/app/views/worksites/_plan_installation.html.erb
+++ b/app/views/worksites/_plan_installation.html.erb
@@ -1,6 +1,6 @@
-<% if @ppsp.worksite.plan_installation.attached? %>
+<% if @ppsp.plan_installation.attached? %>
   <div class="logo">
-    <%= cl_image_tag(@ppsp.worksite.plan_installation.key + '.jpg', height: 300, width: 200, class: "mx-4") %>
+    <%= cl_image_tag(@ppsp.plan_installation.key + '.jpg', height: 300, width: 200, class: "mx-4") %>
   </div>
-  <%= link_to 'Supprimer', destroy_plan_installation_ppsp_path(@ppsp.id, @ppsp.worksite.plan_installation.key), class: 'btn-delete', remote: true %>
+  <%= link_to 'Supprimer', destroy_plan_installation_ppsp_path(@ppsp.id, @ppsp.plan_installation.key), class: 'btn-delete', remote: true %>
 <% end %>
