--- a/app/views/steps_controllers/ppsps_steps/_render_footer_steps.html.erb
+++ b/app/views/steps_controllers/ppsps_steps/_render_footer_steps.html.erb
@@ -22,7 +22,7 @@
   <div class="col-4">
     <div class="d-flex justify-content-center">
       <% unless step == Ppsp.form_steps.keys.last %>
-        <%= f.submit 'Suivant', class: 'link' %>
+        <%= f.submit 'Suivant', class: 'link', id: 'link-next' %>
       <% end %>
     </div>
   </div>
