Typescript on React components

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -17,6 +17,12 @@
   margin-top: 4px;
 }
 
+.container-machine-description {
+  display: flex;
+  align-items: center;
+  margin: 2rem 4rem;
+}
+
 @media (min-width: 576px) {
   .container-app {
     max-width: 540px;
