--- a/app/views/ppsps/_form.html.erb
+++ b/app/views/ppsps/_form.html.erb
@@ -87,7 +87,7 @@
           <div class="logo-client">
             <%= cl_image_tag @ppsp.logo_client.key, class: 'icon-logo mb-3' %>
             <div>
-              <%= link_to "Supprimer", destroy_logo_client_ppsp_path(@ppsp), class: 'btn-delete', id: 'btn-destroy-logo', remote: true %>
+              <%= link_to "Supprimer", destroy_logo_client_path(@ppsp.logo_client.key), class: 'btn-delete', id: 'btn-destroy-logo', method: :delete, remote: true %>
             </div>
           </div>
         <% end %>
