--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -3,6 +3,10 @@
   bottom: 16px;
   right: 16px;
   z-index: 1000;
+  background-color: #ffb0a2;
+  border-radius: 8px;
+  padding: 4px;
+  border: solid 1px #ff7e67;
 }
 
 .text-alert {
