Use gem grover to pdf

--- a/app/views/layouts/pdf.html.erb
+++ b/app/views/layouts/pdf.html.erb
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
   <head>
+    <%= stylesheet_link_tag "application", media: "all" %>
     <meta charset='utf-8' />
-    <%= stylesheet_link_tag wicked_pdf_asset_base64("pdf") %>
     <script>
       function number_pages() {
         var vars={};
