--- a/app/assets/stylesheets/components/_pdf.scss
+++ b/app/assets/stylesheets/components/_pdf.scss
@@ -3,53 +3,24 @@
 
 // On importe Bootstrap etc.. directement dans le layout views/layout/pdf.html.erb
 
+.container-cover {
+  height: 1122px;
+  display: flex;
+  flex-direction: column;
+}
+
 .pdf-banner {
-  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 500px;
+  border-radius: 0 0 50px 50px;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   color: white;
-  position: relative;
-}
-
-.pdf-banner img {
-  height: 300px;
-  width: 100%;
-}
-  
-.pdf-banner .banner-title {
-  position: absolute;
-  top: 90px;
-  width: 100%;
-  text-align: center;
-  font-weight: 600;
-  font-size: 30px;
-}
-
-.pdf-banner .banner-subtitle {
-    position: absolute;
-    top: 180px;
-    width: 100%;
-    text-align: center;
-    font-weight: 400;
-    font-size: 18px;
-}
-
-.pdf-title {
-  text-align: center;
-  font-weight: 500;
-  font-size: 26px;
-  border-bottom: solid 0.5px gray;
-  margin-bottom: 8px;
-}
-
-.pdf-subtitle {
-  text-align: center;
-  font-weight: 500;
-  font-size: 22px;
-}
-
-.pdf-subsubtitle {
-  font-weight: 700;
-  text-decoration: underline;
-  font-size: 18px;
 }
 
 .pdf-text-container {
@@ -58,40 +29,75 @@
   text-align: center;
 }
 
-.container-50 {
-  width: 50%;
-  text-align: start;
-  margin: auto;
-}
-
-.flexbox {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.flex-div {
-  width: 50%;
-}
-
-.mb-1 {
-  margin-bottom: 1em;
-}
-
-.mb-2 {
-  margin-bottom: 2em;
-}
-
-.mb-3 {
-  margin-bottom: 3em;
-}
-
-.my-3 {
-  margin-bottom: 3em;
-  margin-top: 3em;
-}
-
 .page-break { 
   display:block; 
   clear:both; 
   page-break-after:always; 
 }
+
+.pdf-title {
+  text-align: center;
+  font-weight: 500;
+  font-size: 26px;
+  border-bottom: solid 0.5px gray;
+  margin-bottom: 1em;
+}
+
+.pdf-subtitle {
+  text-align: left;
+  font-weight: 500;
+  font-size: 22px;
+  margin-bottom: 1em;
+  margin-top: 1.5em;
+}
+
+.pdf-subsubtitle {
+  font-weight: 700;
+  text-decoration: underline;
+  font-size: 18px;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+.pdf-title-header {
+  text-align: center;
+  font-weight: 600;
+  font-size: 22px;
+  margin-bottom: 1em;
+}
+
+.pdf-subtitle-header {
+  text-align: center;
+  font-size: 18px;
+}
+
+.pdf-header {
+  border-bottom: 1px solid gray;
+}
+
+.container-text {
+  text-align: start;
+}
+
+// Table
+th {
+  border: solid 1px black;
+  padding: 8px 10px;
+  width: 400px;
+}
+
+td { 
+  border: solid 1px black;
+  padding: 16px 10px;
+  width: 400px;
+  margin: 0
+}
+
+// .landscape {
+//   position: relative;
+//   margin: 270mm 0;
+//   width: 270mm;
+//   height: 195mm;
+//   -webkit-transform: rotate(-90deg);
+//   -webkit-transform-origin: 0mm 0mm;
+// }
