--- a/app/views/ppsps/show.pdf.erb
+++ b/app/views/ppsps/show.pdf.erb
@@ -1,4 +1,7 @@
 <body class="bg-white">
+  <div class="page-break">
+    <%= render partial: 'ppsps/render_pages/cover' %>
+  </div>
   <div class="container" id="show-pdf">
     <% if @ppsp.user.company.content_secu.present? %>
        <div class="page-break">
