--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,15 +7,20 @@
 }
 
 .home-banner {
-  min-height: 70vh;
+  position: relative;
+  min-height: 105vh;
   background-position: center;
   background-size: cover;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)),
     asset-url('home-background.jpg');
   .wave {
-    height: 10vh;
+    position: absolute;
+    bottom: 0;
+    height: 203.69px;
     width: 100%;
-    background-image: asset-url('wave.png');
+    background-image: asset-url('wave.svg');
+    background-position: center;
+    background-size: cover;
     animation: animate 60s linear infinite;
   }
   .container-banner {
